--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "booking-app",
+  "name": "pwr-racing",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -20,6 +20,7 @@
     "react-hook-form": "^7.50.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
+    "tailwindcss-filters": "^3.0.0",
     "zustand": "^4.5.1"
   },
   "devDependencies": {
@@ -28,6 +29,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.17",
+    "babel-plugin-example": "^1.0.0",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "postcss": "^8.4.35",
