--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-hook-form": "^7.50.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
+    "react-scroll": "^1.9.0",
     "tailwindcss-filters": "^3.0.0",
     "zustand": "^4.5.1"
   },
