--- a/.env
+++ b/.env
@@ -4,5 +4,7 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mongodb+srv://chmalu:chmalu@cluster0.stjdrdg.mongodb.net/test"
+DATABASE_URL="mongodb+srv://chmalu:tgmirHl3GBehSMBM@cluster0.xephl1o.mongodb.net/PWRRacing"
 NEXTAUTH_SECRET="NEXTAUTH_SECRET"
+# tgmirHl3GBehSMBM
+# chmalu
