--- a/.env
+++ b/.env
@@ -6,5 +6,7 @@
 
 DATABASE_URL="mongodb+srv://chmalu:tgmirHl3GBehSMBM@cluster0.xephl1o.mongodb.net/PWRRacing"
 NEXTAUTH_SECRET="NEXTAUTH_SECRET"
+NEXT_PUBLIC_GOOGLE_MAPS_API_KEY='AIzaSyCgw2HEy6L1MKSuteQq4u8UF-OFSnW0QsA'
+
 # tgmirHl3GBehSMBM
 # chmalu
