--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "express": "^4.19.2",
+    "framer-motion": "^11.2.6",
     "next": "14.1.0",
     "next-auth": "^4.24.6",
     "react": "^18.0.0",
