--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mongodb+srv://stanseamanns:8xJ7ErY96ebYLGu3@globalcounter.78e7a.mongodb.net/"
+DATABASE_URL="mongodb+srv://stanseamanns:8xJ7ErY96ebYLGu3@globalcounter.78e7a.mongodb.net/PWRRacing"
 NEXTAUTH_SECRET="NEXTAUTH_SECRET"
 NEXT_PUBLIC_GOOGLE_MAPS_API_KEY='AIzaSyCgw2HEy6L1MKSuteQq4u8UF-OFSnW0QsA'
 
